k8s/transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: chandrakesh17/transaction-service
        resources:
          limits:
            memory: "400Mi"
            cpu: "500m"
          requests:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 9002
