k8s/bank-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service
spec:
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
      - name: bank-service
        image: chandrakesh17/bank-service
        resources:
          limits:
            memory: "400Mi"
            cpu: "500m"
          requests:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 9001


---

apiVersion: v1
kind: Service
metadata:
  name: bank-service
spec:
  selector:
    app: bank-service
  ports:
  - port: 80
    targetPort: 9001
