k8s/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: chandrakesh17/config-server
        resources:
          limits:
            memory: "400Mi"
            cpu: "200m"
          requests:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 8888
---

apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
  - port: 8888
    targetPort: 8888
