k8s/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
